--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -5,7 +5,7 @@
   <p class="alert alert-danger"><%= alert %></p>
 <% end %>
 
-<div class="max-w-content ml-auto mr-auto pt-[150px] max-w-fit">
+<div class="max-w-content ml-auto mr-auto my-auto max-w-fit">
     <%= image_tag "spreent_logo.png", alt: 'Logo de Spreent' %>
     <%= image_tag "mascotte.png", alt: 'Mascotte de Spreent', class: "w-[300px] mr-auto ml-auto pb-[20px]" %>
 
