--- a/app/views/layouts/app_with_nav.html.erb
+++ b/app/views/layouts/app_with_nav.html.erb
@@ -49,7 +49,7 @@
 
   <body class="bg-[#6a0dad] relative h-[100vh] overflow-hidden m-0 w-full box-border">
     <%= yield :header %>
-    <div class="bg-white text-black pt-5 h-screen px-4 rounded-t-3xl ml-auto mr-auto max-w-3xl">
+    <div class="bg-white text-black pt-5 h-screen px-4 rounded-t-3xl ml-auto mr-auto max-w-3xl overflow-y-scroll">
     <%= yield %>
     </div>
     <nav class="fixed bottom-0 left-0 right-0 bg-black z-[999]">
@@ -156,5 +156,9 @@
           });
         });
       </script>
+
+      <div class="absolute w-[150px] h-[150px] bg-white opacity-50 top-[-50px] left-[-50px] rounded-lg blur-3xl" style="z-index:-1;"></div>
+<div class="absolute w-[150px] h-[150px] bg-white opacity-50 bottom-[-50px] right-[-50px] rounded-lg blur-3xl" style="z-index:-1;"></div>
+
   </body>
 </html>
