fix theme color

--- a/app/views/layouts/fold_without_bar.html.erb
+++ b/app/views/layouts/fold_without_bar.html.erb
@@ -15,6 +15,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="turbo-visit-control" content="reload">
+    <meta name="theme-color" content="#6a0dad" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= turbo_include_tags %>
