--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -203,7 +203,7 @@
 
 
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('turbo:load', function() {
         const joinButton = document.getElementById('join-button');
 
         if (joinButton) {
