--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,7 +3,7 @@
       <div class="flex mb-[10px] items-center relative">
         <div class="post-avatar">
             <% if post.user %>
-            <%= link_to user_path(post.user) do %>
+            <%= link_to user_path(post.user), data: { turbo: false } do %>
                 <% if post.user.avatar.attached? %>
                     <%= image_tag post.user.avatar.variant(resize_to_limit: [50, 50]), class: 'w-[50px] h-[50px] rounded-full object-cover object-center border-3 border-gray-300 mr-[15px]', alt: "#{post.user.email}'s avatar" %>
                 <% else %>
@@ -15,7 +15,7 @@
 
         <div>
             <% if post.user %>
-              <%= link_to user_path(post.user) do %>
+              <%= link_to user_path(post.user), data: { turbo: false } do %>
                 <span class="font-bold"><%= post.user.name %></span>
               <% end %>
             <% end %>
