--- a/app/views/users/_follow_button.html.erb
+++ b/app/views/users/_follow_button.html.erb
@@ -2,11 +2,11 @@
   <div id="follow_button_<%= user.id %>">
     <% if current_user.following?(user) %>
       <%= button_to unfollow_user_path(user), method: :delete, class: "btn btn-secondary cursor-pointer", form: { data: { turbo: true } } do %>
-        <i class="fas fa-user-minus"></i> Unfollow
+        <i class="fas fa-user-minus"></i> Se désabonner
       <% end %>
     <% else %>
       <%= button_to follow_user_path(user), method: :post, class: "btn btn-primary cursor-pointer", form: { data: { turbo: true } } do %>
-        <i class="fas fa-user-plus"></i> Follow
+        <i class="fas fa-user-plus"></i> S'abonner
       <% end %>
     <% end %>
   </div>
