--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :header do %>
-    <h2 style="margin-left:auto;margin-right:auto;" class="ml-auto mr-auto flex max-w-fit text-white py-4 text-2xl"><%= I18n.t('explore.explore_title') %></h2>
+    <h2 style="margin-left:auto;margin-right:auto;" class="ml-auto mr-auto flex max-w-fit text-white py-4 text-2xl h-[56px]"><%= I18n.t('explore.explore_title') %></h2>
 <% end %>
 
   <!-- Search bar with plus button -->
