--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :header do %>
-  <div class="flex text-white py-4">
+  <div class="flex text-white py-4 h-[56px]">
   <%= link_to feed_path, class: 'text-white absolute top-[23px] pl-[20px]', style: 'z-index:9999;' do %>
     <%= image_tag 'arrow_back.png' %>
   <% end %>
