--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,9 +1,9 @@
 <% content_for :header do %>
-  <div class="new-community-header" style="display: flex;color:white;">
-    <%= link_to feed_path, style: 'color:white;position:absolute;top:23px;' do %>
+  <div class="new-community-header" style="display: flex;color:white;height:56px;">
+    <%= link_to feed_path, style: 'color:white;position:absolute;top:23px;padding-left:20px;' do %>
         <%= image_tag 'arrow_back.png', class: 'text-white fill-white' %>
     <% end %>
-    <h2 class="ml-auto mr-auto py-4">Create Community</h2>
+    <h2 class="ml-auto mr-auto py-4 text-2xl">Créer une communauté</h2>
   </div>
 <% end %>
 
@@ -13,7 +13,7 @@
     <%= form_with(model: @community, url: category_sport_communities_path, class: "space-y-6", data: { turbo: false }) do |form| %>
       <div class="bg-white rounded-md p-4">
         <div class="mb-5">
-          <%= form.label :name, "Community Name", class: "block text-sm font-medium text-gray-700 mb-1" %>
+          <%= form.label :name, "Nom de communauté", class: "block text-sm font-medium text-gray-700 mb-1" %>
           <%= form.text_field :name, placeholder: "ex: Mont royal runners", class: "w-full rounded-3xl px-3 py-2 border border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 text-base" %>
         </div>
 
@@ -61,6 +61,6 @@
         </div>
 
 
-        <%= form.submit "Create Community", class: "w-[283px] rounded-3xl  ml-auto mr-auto py-3 px-4 cursor-pointer bg-gradient-to-r from-blue-500 to-indigo-600 text-white font-medium hover:from-blue-600 hover:to-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+        <%= form.submit "Créer la communauté", class: "w-[283px] rounded-3xl  ml-auto mr-auto py-3 px-4 cursor-pointer bg-gradient-to-r from-blue-500 to-indigo-600 text-white font-medium hover:from-blue-600 hover:to-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
       </div>
     <% end %>
