--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :header do %>
-  <h2 class="mr-auto ml-auto max-w-fit text-white py-4 text-2xl"><%= I18n.t('settings.title') %></h2>
+  <h2 class="mr-auto ml-auto max-w-fit text-white py-4 text-2xl h-[56px]"><%= I18n.t('settings.title') %></h2>
 <% end %>
 
 <div class="profile-settings-container">
