--- a/app/views/layouts/app_with_nav.html.erb
+++ b/app/views/layouts/app_with_nav.html.erb
@@ -49,7 +49,7 @@
 
   <body class="bg-[#6a0dad] relative h-[100vh] overflow-hidden m-0 w-full box-border">
     <%= yield :header %>
-    <div class="bg-white text-black pt-5 h-screen px-4 rounded-t-3xl ml-auto mr-auto max-w-3xl">
+    <div class="bg-white text-black pt-5 h-screen px-4 rounded-t-3xl ml-auto mr-auto max-w-3xl" id="some_container">
     <%= yield %>
     </div>
     <nav class="fixed bottom-0 left-0 right-0 bg-black z-[999]">
