--- a/app/views/feed/_posts.html.erb
+++ b/app/views/feed/_posts.html.erb
@@ -40,7 +40,7 @@
             <i class="fa fa-ellipsis-v"></i>
           </button>
 
-          <div class="hidden" data-dropdown-target="menu">
+          <div class="hidden relative right-4" data-dropdown-target="menu">
             <%= link_to "Report", new_post_report_path(post),
                         data: {
                           turbo_frame: "modal_frame",
@@ -51,7 +51,6 @@
         </div>
       </div>
     </div>
-
 
     <div class="mb-[15px] text-base leading-[1.5] pl-[20px] pt-[15px] text-[#30284f]">
       <div class="pb-[20px]">
