--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -37,13 +37,12 @@
 
         <div class="w-[80%]">
             <%= turbo_frame_tag "new_post_form" do %>
-                <%= form_with(model: @new_post, local: false, html: {
-                    class: 'post-form',
+                <%= form_with(model: @new_post, local: false, multipart: true,
                     data: {
                         controller: 'file-upload form-validation',
                         action: 'file-upload:progress->turbo-frame#update'
                     }
-                }) do |form| %>
+                ) do |form| %>
                     <% if @new_post.errors.any? %>
                       <div class="error_messages">
                         <% @new_post.errors.full_messages.each do |message| %>
@@ -60,25 +59,21 @@
                       <%= form.text_area :content,
                           placeholder: I18n.t('feed.share_something'),
                           class: 'form-control share-content w-[85%] resize-none',
-                          rows: 3,
-                                         data: {
-                                           form_validation_target: 'input',
-                                           action: 'input->form-validation#validateForm'
-                                         }
+                          rows: 3
                       %>
                     </div>
 
                     <div class="form-group media-upload">
                       <div class="media-input-wrapper">
                         <%= form.file_field :media,
+                        id: 'primary_file_input',
                             multiple: true,
                             accept: 'image/png,image/jpeg,image/gif,video/mp4,video/quicktime',
                             class: 'form-control-file hidden-file-input hidden',
-                            direct_upload: true,
                             data: {
                               file_upload_target: "fileInput",
                               form_validation_target: 'fileInput',
-                              action: 'change->file-upload#fileSelected change->form-validation#validateForm'
+                              action: 'change->file-upload#fileSelected'
                             }
                         %>
 
@@ -86,10 +81,7 @@
                       </div>
                     </div>
 
-                    <%= form.submit I18n.t('feed.create_post'), class: 'text-white py-[12px] px-[50px] mb-[50px] hover:-translate-y-0.5 hover:shadow-[0_4px_8px_rgba(94,97,231,0.4)] active:translate-y-0.5 active:shadow-[0_1px_3px_rgba(94,97,231,0.4)] transition-all duration-300 ease-in-out rounded-3xl text-xl transition-all duration-300 ease-in-out cursor-pointer ml-auto mr-auto border-none bg-gradient-to-r from-[#5e61e7] to-[#8d7dfa] shadow-[0_2px_5px_rgba(94,97,231,0.3)] disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 disabled:hover:shadow-none', data: {
-                      form_validation_target: 'submitButton',
-                      action: 'click->file-upload#upload'
-                    }, type: 'button' %>
+                    <%= form.submit I18n.t('feed.create_post'), class: 'text-white py-[12px] px-[50px] mb-[50px] hover:-translate-y-0.5 hover:shadow-[0_4px_8px_rgba(94,97,231,0.4)] active:translate-y-0.5 active:shadow-[0_1px_3px_rgba(94,97,231,0.4)] transition-all duration-300 ease-in-out rounded-3xl text-xl transition-all duration-300 ease-in-out cursor-pointer ml-auto mr-auto border-none bg-gradient-to-r from-[#5e61e7] to-[#8d7dfa] shadow-[0_2px_5px_rgba(94,97,231,0.3)] disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 disabled:hover:shadow-none' %>
                 <% end %>
             <% end %>
         </div>
