--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -2,9 +2,9 @@
   <div data-controller="comments">
   <div class="comments-overlay" data-action="click->comments#close"></div>
 
-  <div class="p-4">
+  <div class="p-4 relative">
     <div class="flex">
-      <h2 class="text-2xl"><%= I18n.t('comments.title') %></h2>
+      <h2 class="text-2xl pb-4"><%= I18n.t('comments.title') %></h2>
       <button class="absolute right-0 mr-4" data-action="click->comments#close">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M18 6L6 18M6 6l12 12"></path>
