--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -62,11 +62,11 @@
            <div class="swiper-wrapper">
              <% post.media.each do |media| %>
                  <% if media.image? %>
-                     <div class="swiper-slide" style="height: 400px;">
+                     <div class="swiper-slide" style="max-height: 400px;">
                        <%= image_tag media.variant(resize_to_limit: [1000, 500]), class: 'post-image' %>
                      </div>
                  <% elsif media.video? %>
-                     <div class="swiper-slide" style="height: 400px;">
+                     <div class="swiper-slide" style="max-height: 400px;">
                         <%= video_tag rails_blob_path(media), controls: true, class: 'post-video', style: 'width: 100%; height: 400px' %>
                      </div>
              <% end %>
