--- a/app/views/feed/_posts.html.erb
+++ b/app/views/feed/_posts.html.erb
@@ -54,7 +54,7 @@
 
     <div class="mb-[15px] text-base leading-[1.5] pl-[20px] pt-[15px] text-[#30284f]">
       <div class="pb-[20px]">
-        <%= post.content %>
+        <%= simple_format(post.content) %>
       </div>
 
       <% if post.media.attached? %>
