--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -59,7 +59,8 @@
                       <%= form.text_area :content,
                           placeholder: I18n.t('feed.share_something'),
                           class: 'form-control share-content w-[85%] resize-none',
-                          rows: 3
+                          rows: 3,
+                          required: true
                       %>
                     </div>
 
