--- a/app/views/feed/_posts.html.erb
+++ b/app/views/feed/_posts.html.erb
@@ -47,6 +47,13 @@
                           action: "click->dropdown#close"
                         } %>
             <!-- Other menu items -->
+            <% if post.user.id == current_user.id %>
+              <%= link_to "Delete", post, method: :delete,
+                          data: {
+                            confirm: "Are you sure?",
+                            action: "click->dropdown#close"
+                          } %>
+              <% end %>
           </div>
         </div>
       </div>
